src/ui/radarr_ui/library/snapshots/managarr__ui__radarr_ui__library__edit_movie_ui__edit_movie_ui_tests__tests__snapshot_tests__EditMoviePrompt_MovieDetails.snap
---
source: src/ui/radarr_ui/library/edit_movie_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                    ╭  Movie Info  ────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                     
                    │ Details │ History │ File │ Cast │ Crew │ Manual Search                                                                   │                     
                    │──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│                     
                    │Some information:                                                                                                         │                     
                    │            ╭─────────────────────────────────────────  Edit - Test  ─────────────────────────────────────────╮           │                     
                    │            │                                         Blah blah blah                                          │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                               ╭───╮                                             │           │                     
                    │            │                                    Monitored: │ ✔ │                                             │           │                     
                    │            │                                               ╰───╯                                             │           │                     
                    │            │                                               ╭────────────────────────────────────────────╮    │           │                     
                    │            │                         Minimum Availability: │Announced                                 ▼ │    │           │                     
                    │            │                                               ╰────────────────────────────────────────────╯    │           │                     
                    │            │                                               ╭────────────────────────────────────────────╮    │           │                     
                    │            │                              Quality Profile: │HD - 1080p                                ▼ │    │           │                     
                    │            │                                               ╰────────────────────────────────────────────╯    │           │                     
                    │            │                                               ╭────────────────────────────────────────────╮    │           │                     
                    │            │                                         Path: │/nfs/movies                                 │    │           │                     
                    │            │                                               ╰────────────────────────────────────────────╯    │           │                     
                    │            │                                               ╭────────────────────────────────────────────╮    │           │                     
                    │            │                                         Tags: │alex                                        │    │           │                     
                    │            │                                               ╰────────────────────────────────────────────╯    │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │                                                                                                 │           │                     
                    │            │╭───────────────────────────────────────────────╮╭──────────────────────────────────────────────╮│           │                     
                    │            ││                     Save                      ││                    Cancel                    ││           │                     
                    │            │╰───────────────────────────────────────────────╯╰──────────────────────────────────────────────╯│           │                     
                    │            ╰─────────────────────────────────────────────────────────────────────────────────────────────────╯           │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
